--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -741,6 +741,7 @@ button,
   display: inline-block;
   font-weight: 700;
   height: 2.75em;
+  width: 100%;
   line-height: 2.75em;
   padding: 0 1.125em;
   text-align: center;
@@ -797,6 +798,41 @@ button,
 @media screen and (max-width: 480px) {
   #header {
     margin: 0 0 1em 0; } }
+
+/* Wrapper */
+.wrapper {
+  margin: 0 auto;
+  width: 80vw;
+  display: flex;
+  gap: 10%;
+  justify-content: center;
+  flex-wrap: no-wrap;
+}
+/* Dropdown Menu */
+.left, .right {
+  width: 50%;
+}
+
+/* Display generated text */
+.generatedTextDisplay {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.generatedText {
+  /* height: 90px; */
+}
+
+/* Display Results */
+.displayResults {
+  height: 200px;
+  display: flex;
+  justify-content: center;
+}
+
+.displayResults * {
+  font-size: 3rem;
+}
 
 /* Signup Form */
 #signup-form {
