--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -890,9 +890,9 @@ footer {
   transition: opacity 0.5s ease-in-out;
   /* bottom: 4em; */
   color: rgba(255, 255, 255, 0.5);
-  left: 4em;
+  /* left: 4em; */
   opacity: 0.5;
-  position: absolute; 
+  /* position: absolute;  */
 }
   footer .icons {
     margin: 0 0 0.5em 0; }
