--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -842,8 +842,54 @@ button,
   font-size: 3rem;
   padding: 2rem;
 }
+
 @media screen and (max-width: 360px) {
+  .displayResults * {
   font-size: 2rem;
+  }
+}
+
+/* Slider */
+.slidecontainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+/* The slider itself */
+.slider {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  width: 50%; /* Full-width */
+  height: 2px; /* Specified height */
+  background: rgba(255, 255, 255, 0.4); /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 15px; /* Set a specific slider handle width */
+  height: 15px; /* Slider handle height */
+  background: rgba(255, 255, 255, 0.5); /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+
+.slider::-moz-range-thumb {
+  width: 15px; /* Set a specific slider handle width */
+  height: 15px; /* Slider handle height */
+  background: rgba(255, 255, 255, 0.5); /* Green background */
+  cursor: pointer; /* Cursor on hover */
 }
 
 /* Signup Form */
