--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -836,10 +836,16 @@ button,
 
 /* Display Results */
 .displayResults {
-  /* height: 10rem; */
+  min-height: 10rem;
   /* margin: 2rem auto; */
   display: flex;
   justify-content: center;
+}
+
+@media screen and (max-width: 480px) {
+  .displayResults {
+    min-height: 8rem;
+  }
 }
 
 .displayResults * {
@@ -880,6 +886,7 @@ button,
   }
 }
 
+/* https://www.w3schools.com/howto/howto_js_rangeslider.asp */
 /* Mouse-over effects */
 .slider:hover {
   opacity: 1; /* Fully shown on mouse-over */
