update header margin

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -791,7 +791,7 @@ button,
 
 @media screen and (max-width: 1366px) {
   #header h1 {
-    margin: 5em 0 1em 0; } }  
+    margin: 0 0 1em 0; } }  
 
 @media screen and (max-width: 736px) {
   #header h1 {
